# SimpleClaw

./: .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  Containerfile.linux-build  README.md  TODO.md  plan.md  proposed-config.yaml  test-config.yaml
assets/wasm/: README.md  SHA256SUMS  edit_guest.wasm  read_guest.wasm
guests/edit_guest/: Cargo.toml
guests/read_guest/: Cargo.toml
sandbox/common/: Cargo.toml
sandbox/edit_tool/: Cargo.toml
sandbox/glob_tool/: Cargo.toml
sandbox/grep_tool/: Cargo.toml
sandbox/list_tool/: Cargo.toml
sandbox/podman/: Containerfile
sandbox/read_tool/: Cargo.toml
sandbox/web_fetch_tool/: Cargo.toml
sandbox/web_fetch_tool/src/: main.rs
sandbox/web_search_tool/: Cargo.toml
scripts/: build-wasm-guests.sh  install.sh  linux_integration_podman.sh  uninstall.sh
src/: agent.rs  approval.rs  channel.rs  cli.rs  config.rs  dispatch.rs  error.rs  gateway.rs  invoke.rs  lib.rs  main.rs  memory.rs  paths.rs  prompt.rs  provider.rs  react.rs  reply_policy.rs  run.rs  secrets.rs  telemetry.rs  testing.rs  tools.rs
src/audio/: cli.rs  config.rs  decode.rs  mod.rs  transcribe.rs  tts.rs  voice.rs
src/auth/: mod.rs  openai_oauth.rs
src/channels/: discord.rs  discord_stream.rs  discord_stream_logic.rs  mod.rs  policy.rs  types.rs
src/config/: agents.rs  database.rs  defaults.rs  execution.rs  gateway.rs  mod.rs  normalize.rs  providers.rs  routing.rs  tools.rs  validate.rs
src/gateway/: command.rs  mod.rs  policy.rs  router.rs  session.rs  transport.rs
src/memory/: embedder.rs  mod.rs  preinject.rs  recall.rs  schema.rs  types.rs
src/providers/: gemini.rs  mod.rs  moonshot_compatible.rs  openai_codex.rs  registry.rs  types.rs
src/run/: composition.rs  cron_scheduler.rs  daemon.rs  logging.rs  session.rs  transparency.rs
src/sandbox/: host.rs  mod.rs  wasm.rs
src/tools/: async_tool_manager.rs  builtin.rs  mod.rs  sandbox.rs  sandbox_runtime.rs  (+1 more)
tests/: gateway_roundtrip_e2e.rs
(+36 files in other folders)
