[package]
name = "simpleclaw"
version = "0.1.0"
edition = "2024"

[workspace]
members = [
  "sandbox/common",
  "sandbox/read_tool",
  "sandbox/edit_tool",
]
default-members = ["."]

[dependencies]
async-trait = "0.1"
clap = { version = "4", features = ["derive"] }
color-eyre = "0.6"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
thiserror = "2"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time", "sync", "process", "net", "io-util"] }
tokio-stream = "0.1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "json"] }
chrono = { version = "0.4", default-features = false, features = ["clock", "std"] }
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "stream"] }
scraper = "0.22"
url = "2"
deadpool-sqlite = "0.9"
rusqlite = { version = "0.32", features = ["bundled", "load_extension"] }
serenity = { version = "0.12", default-features = false, features = ["client", "gateway", "model", "http", "rustls_backend"] }
fastembed = "5"
sqlite-vec = "0.1"
regex = "1"
wasmtime = "21"
wasmtime-wasi = "21"
cap-std = "3"
sandbox_common = { path = "sandbox/common" }
sandbox-runtime = "0.1.1"
cron = "0.15"
uuid = { version = "1", features = ["v4"] }
base64 = "0.22"
rand = "0.8"
sha2 = "0.10"
fs2 = "0.4"

[patch.crates-io]
sandbox-runtime = { git = "https://github.com/Prometheus1400/sandbox-runtime-rs", rev = "fa51f051e53b4ea1121eb7f864697710099821b6" }
